# fmtcvt

./: README.md  pyproject.toml
fmtcvt/: cli.py  core.py
tests/: test_fmtcvt.py
