[tool.poetry]
name = "fmtcvt"
version = "0.1.0"
description = "Convert Structured Text Files"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pyyaml = "^5.3"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.761"
pylint = "^2.4.4"
pytest = "^5.3.5"

[tool.poetry.scripts]
fmtcvt = "fmtcvt.cli:main"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
